Fix notification's z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,7 +120,7 @@ blockquote p:after, blockquote p:before {
   width: 600px;
   height: auto;
   background-color: white;
-  z-index: 3;
+  z-index: 6;
   max-width: 85%;
   min-height: 40px;
   max-height: 80px;
